# mantis2

./: CMakeLists.txt  package.xml
include/mantis2/: CoPlanarPoseEstimator.cpp  CoPlanarPoseEstimator.h  GridTestPointGeneration.h  HypothesisError.h  Mantis2HypothesisGeneration.h  Mantis2Parameters.h  Mantis2Types.h  XYMarkovModel.cpp  XYMarkovModel.h  YawMarkov.cpp  YawMarkov.h
launch/: mantis_simulation_dataset.launch
src/: mantis2_node.cpp
